--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,9 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>user-module</module>
+        <module>module-user</module>
         <module>web</module>
+        <module>module-commons</module>
     </modules>
 
     <properties>
@@ -38,6 +39,11 @@
                 <artifactId>lombok</artifactId>
                 <optional>true</optional>
                 <version>1.18.16</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>2.2.0</version>
             </dependency>
 
 
