first test -erueka test -database test -openFeign test

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 # 应用名称
 spring.application.name=web
 # 应用服务 WEB 访问端口
-server.port=8080
+server.port=2010
+
+
+#服务地址
+eureka.instance.hostname=eureka-server
+#注册中心路径，表示我们向这个注册中心注册服务，如果向多个注册中心注册，用“，”进行分隔
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:2001/eureka
+#显示ip地址
+eureka.instance.prefer-ip-address=true
 
 
