--- a/module-user/user-impl/src/main/resources/application.properties
+++ b/module-user/user-impl/src/main/resources/application.properties
@@ -17,8 +17,8 @@ eureka.instance.prefer-ip-address=true
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 
-spring.datasource.data-username=root
-spring.datasource.data-password=123456
+spring.datasource.username=root
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.114.129:3306/sys?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=CONVERT_TO_NULL
+spring.datasource.url=jdbc:mysql://192.168.114.129:3306/myproject?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai&zeroDateTimeBehavior=CONVERT_TO_NULL
 
