--- a/module-user/user-impl/src/main/resources/application.properties
+++ b/module-user/user-impl/src/main/resources/application.properties
@@ -15,8 +15,13 @@ eureka.instance.prefer-ip-address=true
 #心跳超时时间10s，默认90s。从client端最后一次发出心跳后，达到这个时间没有再次发出心跳，表示服务不可用，将它的实例从注册中心移除
 #eureka.instance.lease-expiration-duration-in-seconds=10
 
+#mybatis
+#mapperxml文件位置
 mybatis.mapper-locations=classpath:mapper/*.xml
+#实体类映射
+#mybatis.type-aliases-package=com.example.userInterface.po
 
+#数据库
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
