--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -12,3 +12,6 @@ eureka.client.serviceUrl.defaultZone=http://127.0.0.1:2001/eureka
 eureka.instance.prefer-ip-address=true
 
 
+spring.redis.host=192.168.114.129
+spring.redis.port=6379
+
