--- a/module-commons/commons-core/pom.xml
+++ b/module-commons/commons-core/pom.xml
@@ -17,6 +17,16 @@
 <!--            <optional>true</optional>-->
             <version>1.18.16</version>
         </dependency>
+        <!--常用工具类 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <!-- Spring框架基本的核心工具 -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
